<resources>
    <string name="app_name">Don de soi</string>
    <string name="share">facebook_share_button</string> <!-- bouton partage facebook -->

    <string name="com.twitter.sdk.android.CONSUMER_KEY">pcjC2AEHjqyKtwm9v3yEbnCZZ</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">JhSi3rHpx1r7GIosk69Rq9eZnYmTOtzdkqMIfKMQeC1Z99XQku</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_forum_login">Forum</string>
    <string name="title_activity_search">Trouver un centre</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_infos">Informations</string>
    <string name="title_activity_settings">Settings</string>
    <string name="facebook_app_id">334365977044649</string>
    <string name="fb_login_protocol_scheme">fb1334365977044649</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_localisation">Activer la localisation</string>
    <string name="pref_description_localisation">améliore les calculs d\'affluence</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_give_notifications">Notifications nouveau don</string>
    <string name="pref_description_new_give_notifications">Notifier quand vous pourrez faire un nouveau don</string>

    <string name="pref_title_date_picker">Date du dernier don</string>

    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silencieux</string>

    <string name="pref_title_vibrate">Vibrer</string>

    <string name="title_activity_facebook_login">Facebook</string>
    <string name="title_activity_twitter_login">Twitter</string>
    <string name="title_activity_infos_detail">InfosDetailActivity</string>
    <string name="title_activity_facebook_share">FacebookShareActivity</string>
    <string name="facebook_share_button">share</string>
</resources>
